@@ -1,26 +1,33 @@
 package com.spring.core;
 
+import org.apache.commons.lang3.StringUtils;
+
 import java.io.*;
 import java.util.ArrayList;
 import java.util.List;
 
-public class ShellCommandExecuteHelper implements ICommandExecuteHelper{
+public class ShellCommandExecuteHelper implements ICommandExecuteHelper {
+
     @Override
-    public Integer exec(String command) {
+    public Integer exec(String command, String directory) {
         List<Integer> oldList = getPidList(command);
         try {
-            Runtime.getRuntime().exec(command);
-        } catch (IOException e) {
+            String[] cmd = StringUtils.split(command, " ");
+            ProcessBuilder builder = new ProcessBuilder(cmd);
+            if(StringUtils.isNotEmpty(directory)) {
+                builder.directory(new File(directory));
+            }
+//            builder.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+//            builder.redirectError(ProcessBuilder.Redirect.INHERIT);
+            builder.start();
+        } catch (Exception e) {
             e.printStackTrace();
         }
         List<Integer> newList = getPidList(command);
-
         newList.removeAll(oldList);
-
-        if (newList.size() > 0 ) {
-            return  newList.get(0);
-        }
-        else {
+        if (newList.size() > 0) {
+            return newList.get(0);
+        } else {
             return -1;
         }
     }
@@ -36,20 +43,15 @@ public class ShellCommandExecuteHelper implements ICommandExecuteHelper{
 
     @Override
     public List<Integer> getPidList(String command) {
-
         ArrayList<Integer> result = new ArrayList<>();
         try {
             Process process = Runtime.getRuntime().exec("ps -eo pid,command");
-
             BufferedReader br = new BufferedReader(new InputStreamReader(process.getInputStream()));
-
             String line = null;
-
-            while((line = br.readLine()) != null){
+            while ((line = br.readLine()) != null) {
                 Integer endIndex = line.indexOf(command);
                 if (endIndex > -1) {
                     String pidString = line.substring(0, endIndex).trim();
-
                     Integer pid = Integer.parseInt(pidString);
                     if (pid != null) {
                         result.add(pid);
@@ -57,12 +59,9 @@ public class ShellCommandExecuteHelper implements ICommandExecuteHelper{
 
                 }
             }
-
         } catch (IOException e) {
             e.printStackTrace();
         }
-
-
         return result;
     }
 }
